--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -725,3 +725,20 @@ DOI: 10.1007/11840541_68},
   url = {https://drake.mit.edu},
   author = {Tedrake, Russ and Team, the Drake Development},
 }
+@inproceedings{todorovMuJoCoPhysicsEngine2012,
+  title = {{{MuJoCo}}: {{A}} Physics Engine for Model-Based Control},
+  shorttitle = {{{MuJoCo}}},
+  booktitle = {2012 {{IEEE}}/{{RSJ International Conference}} on {{Intelligent Robots}} and {{Systems}}},
+  author = {Todorov, Emanuel and Erez, Tom and Tassa, Yuval},
+  date = {2012-10},
+  pages = {5026--5033},
+  publisher = {IEEE},
+  location = {Vilamoura-Algarve, Portugal},
+  doi = {10.1109/IROS.2012.6386109},
+  url = {http://ieeexplore.ieee.org/document/6386109/},
+  urldate = {2025-02-26},
+  abstract = {We describe a new physics engine tailored to model-based control. Multi-joint dynamics are represented in generalized coordinates and computed via recursive algorithms. Contact responses are computed via efficient new algorithms we have developed, based on the modern velocity-stepping approach which avoids the difficulties with spring-dampers. Models are specified using either a high-level C++ API or an intuitive XML file format. A built-in compiler transforms the user model into an optimized data structure used for runtime computation. The engine can compute both forward and inverse dynamics. The latter are well-defined even in the presence of contacts and equality constraints. The model can include tendon wrapping as well as actuator activation states (e.g. pneumatic cylinders or muscles). To facilitate optimal control applications and in particular sampling and finite differencing, the dynamics can be evaluated for different states and controls in parallel. Around 400,000 dynamics evaluations per second are possible on a 12-core machine, for a 3D homanoid with 18 dofs and 6 active contacts. We have already used the engine in a number of control applications. It will soon be made publicly available.},
+  eventtitle = {2012 {{IEEE}}/{{RSJ International Conference}} on {{Intelligent Robots}} and {{Systems}} ({{IROS}} 2012)},
+  isbn = {978-1-4673-1736-8 978-1-4673-1737-5 978-1-4673-1735-1},
+  langid = {english}
+}
