--- a/src/content/docs/en/simulators.mdx
+++ b/src/content/docs/en/simulators.mdx
@@ -28,35 +28,34 @@ What makes a robotics simulator a robotics simulator:
 
 ## Overview
 
-| Name                                                                                        | Paper                                         | Physics Engine                                                        | Rendering                                                        | Models | Features | Languages                                                                                                                                          | Licenses    | Active | Source code                                                   |
-|---------------------------------------------------------------------------------------------|-----------------------------------------------|-----------------------------------------------------------------------|------------------------------------------------------------------|--------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------|-------------|--------|---------------------------------------------------------------|
-| [Gazebo (`gz`)](https://gazebosim.org/home)                                                 |                                               | DARTsim,<br/>Bullet,<br/>TPE                                          | OGRE 1.x,<br/>OGRE-Next 2.x,<br/>OptiX                           |        |          | C++, Python                                                                                                                                        | Apache 2.0  |        | [github](https://github.com/gazebosim/gz-sim)                 |
-| [Webots](https://cyberbotics.com/)                                                          | @Webots04                                     | [ODE](https://cyberbotics.com/doc/reference/ode-open-dynamics-engine) | [OpenGL](https://cyberbotics.com/doc/blog/Webots-2018-b-release) |        |          | C,<br/>C++,<br/>Java,<br/>Python,<br/>MATLAB,<br/>TCP/IP,<br/>[see language-setup for reference](https://cyberbotics.com/doc/guide/language-setup) | Apache 2.0  |        | [github](https://github.com/cyberbotics/webots)               |
-| [PyBullet](https://pybullet.org/wordpress/)                                                 | @coumans2021                                  | Bullet                                                                | OpenGL, TinyRenderer (built-in CPU renderer)                     |        |          | C,<br/>C++,<br/>Python                                                                                                                             | zlib        |        | [github](https://github.com/bulletphysics/bullet3)            |
-| [AirSim](https://microsoft.github.io/AirSim/)                                               | @shahAirSimHighFidelityVisual2017             | PhysX (default),<br/>Chaos Physics (UE >= 5)                          |                                                                  |        |          |                                                                                                                                                    | MIT License |        | [github](https://github.com/microsoft/AirSim)                 |
-| [ARGoS](https://www.argos-sim.info/)                                                        | @pinciroliARGoSModularMultiengine2011         |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/ilpincy/argos3)                   |
-| [AI2-Thor](https://ai2thor.allenai.org/)                                                    | @kolveAI2THORInteractive3D2022                |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/allenai/ai2thor)                  |
-| [ARTE](https://arvc.umh.es/arte/index_en.html)                                              | @gilDevelopmentDeploymentNew2015              |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/4rtur1t0/ARTE)                    |
-| [AVIS Engine](https://avisengine.com/)                                                      | @zarifAVISEngineHighperformance2021           |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/AVISEngine/AVISEngine-Simulator)  |
-| [CARLA](https://carla.org/)                                                                 | @pmlr-v78-dosovitskiy17a                      |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/carla-simulator/carla)            |
-| [CoppeliaSim (formerly V-REP)](https://www.coppeliarobotics.com/) (core lib)                | @rohmerVREPVersatileScalable2013              |                                                                       |                                                                  |        |          |                                                                                                                                                    | GNU GPL     |        | [github](https://github.com/CoppeliaRobotics/coppeliaSimLib)  |
-| [GraspIt!](https://graspit-simulator.github.io/)                                            | @millerGraspIt2004                            |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/graspit-simulator/graspit)        |
-| [Habitat Simulator](https://aihabitat.org/docs/habitat-sim/)                                | @savvaHabitatPlatformEmbodied2019             |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/facebookresearch/habitat-sim)     |
-| [Isaac Sim](https://developer.nvidia.com/isaac/sim)                                         |                                               | NVIDIAPhysX                                                           |                                                                  |        |          |                                                                                                                                                    |             |        |                                                               |
-| [MORSE](https://morse-simulator.github.io/)                                                 | @echeverriaModularOpenRobots2011              |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/morse-simulator/morse)            |
-| [PyBullet Industrial](https://pybullet-industrial.readthedocs.io/en/latest/how_to_use.html) | @Baumgartner_PyBullet_Industrial_A_2023       | Bullet                                                                |                                                                  |        |          | Python                                                                                                                                             |             |        | [github](https://github.com/WBK-Robotics/pybullet_industrial) |
-| [SAPIEN](https://sapien.ucsd.edu/)                                                          | @xiangSAPIENSimulAtedPartBased2020            |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/haosulab/SAPIEN)                  |
-| [ManiSkill](https://www.maniskill.ai/) powered SAPIEN                                       |                                               |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/haosulab/ManiSkill)               |
-| [Simbad](https://simbad.sourceforge.net/)                                                   | @huguesSimbadAutonomousRobot2006              |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [sourceforge](https://sourceforge.net/projects/simbad/)       |
-| 🔍 [Genesis](https://genesis-world.readthedocs.io/en/latest/)                               | @genesisauthorsGenesisUniversalGenerative2024 |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/Genesis-Embodied-AI/Genesis)      |
-| [SwarmSimX](https://link.springer.com/chapter/10.1007/978-3-642-34327-8_34)                 | @lacheleSwarmSimXRealTimeSimulation2012       |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        |                                                               |
-| [MVSim](https://mvsimulator.readthedocs.io/en/latest/)                                      | @blanco-claracoMultiVehicleSimulatorMVSim2023 |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/MRPT/mvsim)                       |
-| [AGX Dynamics](https://www.algoryx.se/agx-dynamics/)                                        |                                               |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        |                                                               |
-| [Flightmare](https://uzh-rpg.github.io/flightmare/)                                         | @song2020flightmare                           |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/uzh-rpg/flightmare)               |
-| [O3DE](https://o3de.org/)                                                                   |                                               |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/o3de/o3de)                        |
-| [FlightGear](https://www.flightgear.org/)                                                   |                                               |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [gitlab](https://gitlab.com/flightgear/flightgear)            |
-| [FlightGoogles](https://flightgoggles.mit.edu/)                                             | @guerraFlightGogglesModularFramework2019      |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/mit-aera/FlightGoggles)           |
-| [DRAKE](https://drake.mit.edu/)                                                             | @drake                                        |                                                                       |                                                                  |        |          | C++, Python                                                                                                                                        |             |        |                                                               |
+| Name                                                                                        | Paper                                         | Physics Engine                                                                    | Rendering                                                        | Models | Features | Languages                                                                                                                                          | Licenses             | Active | Source code                                                   |
+|---------------------------------------------------------------------------------------------|-----------------------------------------------|-----------------------------------------------------------------------------------|------------------------------------------------------------------|--------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------|----------------------|--------|---------------------------------------------------------------|
+| [Gazebo (`gz`)](https://gazebosim.org/home)                                                 |                                               | DARTsim,<br/>Bullet,<br/>TPE                                                      | OGRE 1.x,<br/>OGRE-Next 2.x,<br/>OptiX                           |        |          | C++, Python                                                                                                                                        | Apache 2.0           |        | [github](https://github.com/gazebosim/gz-sim)                 |
+| [Webots](https://cyberbotics.com/)                                                          | @Webots04                                     | [ODE](https://cyberbotics.com/doc/reference/ode-open-dynamics-engine)             | [OpenGL](https://cyberbotics.com/doc/blog/Webots-2018-b-release) |        |          | C,<br/>C++,<br/>Java,<br/>Python,<br/>MATLAB,<br/>TCP/IP,<br/>[see language-setup for reference](https://cyberbotics.com/doc/guide/language-setup) | Apache 2.0           |        | [github](https://github.com/cyberbotics/webots)               |
+| [PyBullet](https://pybullet.org/wordpress/)                                                 | @coumans2021                                  | Bullet                                                                            | OpenGL, TinyRenderer (built-in CPU renderer)                     |        |          | C,<br/>C++,<br/>Python                                                                                                                             | zlib                 |        | [github](https://github.com/bulletphysics/bullet3)            |
+| [AirSim](https://microsoft.github.io/AirSim/)                                               | @shahAirSimHighFidelityVisual2017             | PhysX (default),<br/>Chaos Physics (UE >= 5)                                      |                                                                  |        |          |                                                                                                                                                    | MIT License          |        | [github](https://github.com/microsoft/AirSim)                 |
+| [ARGoS](https://www.argos-sim.info/)                                                        | @pinciroliARGoSModularMultiengine2011         | ODE,<br/>custom 3D particle engine,<br/>Chipmunk,<br/>custom 2D kinematics engine | OpenGL, POV-Ray                                                  |        |          | C++, PROTO?                                                                                                                                        | MIT License          |        | [github](https://github.com/ilpincy/argos3)                   |
+| [ARTE](https://arvc.umh.es/arte/index_en.html) (A Robotics Toolbox for Education)           | @gilDevelopmentDeploymentNew2015              |                                                                                   |                                                                  |        |          | C++                                                                                                                                                | GNU LGPL             |        | [github](https://github.com/4rtur1t0/ARTE)                    |
+| [AVIS Engine](https://avisengine.com/)                                                      | @zarifAVISEngineHighperformance2021           | Unity-based                                                                       | Unity-based                                                      |        |          | TPC-based messaging system                                                                                                                         |                      |        | [github](https://github.com/AVISEngine/AVISEngine-Simulator)  |
+| [CARLA](https://carla.org/)                                                                 | @pmlr-v78-dosovitskiy17a                      | UE-based                                                                          | UE-based                                                         |        |          | socket-based server-client                                                                                                                         | MIT License          |        | [github](https://github.com/carla-simulator/carla)            |
+| [GraspIt!](https://graspit-simulator.github.io/)                                            | @millerGraspIt2004                            |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/graspit-simulator/graspit)        |
+| [Habitat Simulator](https://aihabitat.org/docs/habitat-sim/)                                | @savvaHabitatPlatformEmbodied2019             |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/facebookresearch/habitat-sim)     |
+| [Isaac Sim](https://developer.nvidia.com/isaac/sim)                                         |                                               | NVIDIAPhysX                                                                       |                                                                  |        |          |                                                                                                                                                    |                      |        |                                                               |
+| [MORSE](https://morse-simulator.github.io/)                                                 | @echeverriaModularOpenRobots2011              |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/morse-simulator/morse)            |
+| [PyBullet Industrial](https://pybullet-industrial.readthedocs.io/en/latest/how_to_use.html) | @Baumgartner_PyBullet_Industrial_A_2023       | Bullet                                                                            |                                                                  |        |          | Python                                                                                                                                             |                      |        | [github](https://github.com/WBK-Robotics/pybullet_industrial) |
+| [SAPIEN](https://sapien.ucsd.edu/)                                                          | @xiangSAPIENSimulAtedPartBased2020            |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/haosulab/SAPIEN)                  |
+| [ManiSkill](https://www.maniskill.ai/) powered SAPIEN                                       |                                               |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/haosulab/ManiSkill)               |
+| [Simbad](https://simbad.sourceforge.net/)                                                   | @huguesSimbadAutonomousRobot2006              |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [sourceforge](https://sourceforge.net/projects/simbad/)       |
+| 🔍 [Genesis](https://genesis-world.readthedocs.io/en/latest/)                               | @genesisauthorsGenesisUniversalGenerative2024 |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/Genesis-Embodied-AI/Genesis)      |
+| [SwarmSimX](https://link.springer.com/chapter/10.1007/978-3-642-34327-8_34)                 | @lacheleSwarmSimXRealTimeSimulation2012       |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        |                                                               |
+| [MVSim](https://mvsimulator.readthedocs.io/en/latest/)                                      | @blanco-claracoMultiVehicleSimulatorMVSim2023 |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/MRPT/mvsim)                       |
+| [AGX Dynamics](https://www.algoryx.se/agx-dynamics/)                                        |                                               |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        |                                                               |
+| [Flightmare](https://uzh-rpg.github.io/flightmare/)                                         | @song2020flightmare                           |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/uzh-rpg/flightmare)               |
+| [O3DE](https://o3de.org/)                                                                   |                                               |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/o3de/o3de)                        |
+| [FlightGear](https://www.flightgear.org/)                                                   |                                               |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [gitlab](https://gitlab.com/flightgear/flightgear)            |
+| [FlightGoogles](https://flightgoggles.mit.edu/)                                             | @guerraFlightGogglesModularFramework2019      |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/mit-aera/FlightGoggles)           |
+| [DRAKE](https://drake.mit.edu/)                                                             | @drake                                        | N/A, focus on dynamics                                                            | VTK,<br/>OpenGL,<br/>GltfClient                                  |        |          | C++, Python                                                                                                                                        | 3-Clause BSD License |        | [github](https://github.com/RobotLocomotion/drake)            |
+| [CoppeliaSim (formerly V-REP)](https://www.coppeliarobotics.com/) (core lib)                | @rohmerVREPVersatileScalable2013              |                                                                                   |                                                                  |        |          |                                                                                                                                                    | GNU GPL              |        | [github](https://github.com/CoppeliaRobotics/coppeliaSimLib)  |
 
 
 
@@ -67,6 +66,7 @@ Physics Engines:
 - [PhysX](https://github.com/NVIDIA-Omniverse/PhysX)
 - [MuJoCo](https://mujoco.org/), paper @todorovMuJoCoPhysicsEngine2012, source code [github](https://github.com/google-deepmind/mujoco)
 - [ODE (Open Dynamics Engine)](https://www.ode.org/), [bitbucket](https://bitbucket.org/odedevs/ode/src/master/)
+- (2D) [Chipmunk](https://chipmunk-physics.net/)
 
 Game engines:
 - [UE 4 uses PhysX as default](https://dev.epicgames.com/documentation/en-us/unreal-engine/physics?application_version=4.27), EpicGame is introducing [Chaos Physics](https://dev.epicgames.com/documentation/en-us/unreal-engine/chaos-physics-overview?application_version=4.27) as future replacement for PhysX.
@@ -106,6 +106,9 @@ Cool projects:
 Subject specific:
 - [Neurorobotics Platform (NRP)](https://neurorobotics.net/): Internet-accessible simulation of robots controlled by spiking neural networks, source code [bitbucket](https://bitbucket.org/hbpneurorobotics/neurorobotics-platform/src/master/)
 
+## Frameworks
+
+- [AI2-Thor](https://ai2thor.allenai.org/), @kolveAI2THORInteractive3D2022, source code [github](https://github.com/allenai/ai2thor)
 
 ## from /Ly0n/awesome-robotic-tooling
 
@@ -153,6 +156,10 @@ Subject specific:
 - Dynamic_logistics_Warehouse - Gazebo simulation of dynamics environment in warehouses.
 - OpenCDA - A generalized framework for prototyping full-stack cooperative driving automation applications under CARLA+SUMO.
 
+
+ARGoS:
+- discrete time simulation
+- sub-space and entity-based simulators
 
 ## External Resources
 
